--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <header>
     <img src="logo.png" alt="公司Logo" class="company-logo">
-    <h1>欢迎来到我们的公司</h1>
+    <h1>欢迎来到我们的零食店</h1>
 </header>
 
 <nav>
@@ -87,8 +87,8 @@
     <section id="contact" class="contact-info">
         <h2>联系我们</h2>
         <p>Email: contact@example.com</p>
-        <p>电话: +86 123 4567 8901</p>
-        <p>地址: 中国北京市朝阳区某路某号</p>
+        <p>电话: +86 18974217026</p>
+        <p>地址: 湖南省郴州市北湖区香雪路北一门旁一然零食</p>
     </section>
 </div>
 
