--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
 
 <header>
-    <img src="logo.png" alt="公司Logo" class="company-logo">
+    <img src="C:\Users\YYJ\Desktop\证件照" alt="公司Logo" class="company-logo">
     <h1>欢迎来到我们的零食店</h1>
 </header>
 
