--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
 
 <header>
-    <img src="C:https://github.com/453325344/my-00258yiran-website/blob/main/121.png" alt="公司Logo" class="company-logo">
+    <img src="C:https://github.com/453325344/my-00258yiran-website/blob/main/121.png" alt="qqq" class="company-logo">
     <h1>欢迎来到我们的零食店</h1>
 </header>
 
