--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             position: relative;
             overflow: hidden;
             width: 100%;
-            height: 300px;
+            height: 200px; /* 缩小轮播图的高度 */
         }
         .carousel img {
             width: 100%;
@@ -74,18 +74,22 @@
         .carousel img.inactive {
             opacity: 0;
         }
+        .additional-image {
+            max-width: 100%;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
 
 <header>
     <img src="121.png" alt="qqq" class="company-logo">
-    <h1>欢迎来到一然零食店</h1>
+    <h1>欢迎来到我们的零食店</h1>
 </header>
 
 <nav>
     <!-- 导航链接，点击时调用 showPage 函数显示相应页面 -->
-    <a href="#" onclick="showPage('home')">进行中团购</a>
+    <a href="#" onclick="showPage('home')">首页</a>
     <a href="#" onclick="showPage('about')">关于我们</a>
     <a href="#" onclick="showPage('contact')">联系我们</a>
 </nav>
@@ -101,8 +105,8 @@
             <img src="ps3.jfif" alt="Image 3" class="inactive">
         </div>
         <p>这里是我们的主页，欢迎您访问！</p>
-        <p>快团团跟团传送门</p> <!-- 新增的文字 -->
-    <img src="psQR.jfif" alt="Additional Image" class="additional-image"> <!-- 新增的图片 -->
+        <p>大萨达所多所多</p> <!-- 新增的文字 -->
+        <img src="additional_image.jpg" alt="Additional Image" class="additional-image"> <!-- 新增的图片 -->
     </section>
 
     <!-- 关于我们内容，默认隐藏 -->
@@ -161,7 +165,7 @@
 
                 images[currentIndex].classList.remove('inactive');
                 images[currentIndex].classList.add('active');
-            }, 3000); // 每隔 3 秒切换一张图片
+            }, 1000); // 每隔 1 秒切换一张图片
         });
     }
 
